<resources>
    <string name="app_name">Weight Tracking Application</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="weight_tracking_app">Weight Tracking App</string>
    <string name="weight_tracking_data">Weight Tracking Data</string>
    <string name="log_weight">Log Weight</string>
    <string name="weight">Weight(LBs)</string>
    <string name="date">Date</string>
    <string name="Delete_Button">Delete Button</string>
    <string name="Edit_Button">Edit Button</string>
    <string name="view_weight_history">View Weight History</string>
    <string name="set_goal_weight">Set Goal Weight</string>
    <string name="insert_goal_weight_in_lbs">Insert Goal Weight in LBs</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="submit_edited_weight">Submit Edited Weight</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="allow_sms_notifications">Allow SMS Notifications?</string>
    <string name="insert_today_s_weight_in_lbs">Insert Today\'s Weight in LBs</string>
    <string name="goal_weight">Goal Weight:</string>
    <string name="insert_date">Insert Today\'s Date (YYYY-MM-DD)</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="insert_phone_number_0123456789">Insert Phone Number (0123456789)</string>
    <string name="submit_phone_number">Submit Phone Number</string>
    <string name="set_daily_calorie_goal">Set Daily Calorie Goal</string>
    <string name="log_calories">Log Calories</string>
    <string name="insert_calorie_goal_9999">Insert Calorie Goal (9999)</string>
    <string name="submit_daily_calorie_goal">Submit Daily Calorie Goal</string>
    <string name="display_calorie_calculation_here">Display Calorie Calculation here!</string>
    <string name="log_food_item">Log Food Item</string>
    <string name="food_description">Food Description</string>
    <string name="calories">Calories</string>
    <string name="insert_food_name">Insert Food Name</string>
    <string name="insert_carbohydrates_per_serving">Insert Carbohydrates Per Serving</string>
    <string name="insert_fats_per_serving">Insert Fats Per Serving</string>
    <string name="insert_protein_per_serving">Insert Protein Per Serving</string>
    <string name="insert_servings_consumed">Insert Servings Consumed</string>
    <string name="submit_food_item">Submit Food Item</string>
    <string name="display_date_here">Display Date Here!</string>
    <string name="insert_new_date_mm_yy_dddd">Insert New Date (MM/YY/DDDD)</string>
</resources>