<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogWeightActivity">

    <TextView
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_tracking_app"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonClick"
        android:text="@string/back"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/foodNameEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_food_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <EditText
        android:id="@+id/insertCarbsEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_carbohydrates_per_serving"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <EditText
        android:id="@+id/insertFatsEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_fats_per_serving"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <EditText
        android:id="@+id/insertProteinEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_protein_per_serving"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <EditText
        android:id="@+id/insertServingsEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_servings_consumed"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <Button
        android:id="@+id/submitFoodButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:enabled="false"
        android:text="@string/submit_food_item"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

</androidx.constraintlayout.widget.ConstraintLayout>