<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:text="@string/weight_tracking_app"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:autofillHints="password" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/log_in"
        android:textColor="@android:color/black"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        app:layout_constraintHorizontal_bias="0.79" />
</androidx.constraintlayout.widget.ConstraintLayout>