<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Page Header -->
    <TextView
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_tracking_data"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/primary"/>



    <!-- RecyclerView for Data -->

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pageHeader"
        android:background="@android:color/transparent"
        android:onClick="onBackButtonClick"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goalWeightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageHeader"
        android:text="@string/goal_weight"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@android:color/transparent"
        app:spanCount="1"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goalWeightTextView"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:spanCount="1" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_weight"
        android:textColor="@android:color/black"

        android:layout_below="@id/recyclerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
