<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogWeightActivity">

    <TextView
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_tracking_app"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackButtonClick"
        android:text="@string/back"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        android:id="@+id/logDateEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/logWeightEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/insert_today_s_weight_in_lbs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submitWeightButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/log_weight"
        android:textColor="@android:color/black"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

</androidx.constraintlayout.widget.ConstraintLayout>