<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_tracking_app"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/primary"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pageHeader"
        android:background="@android:color/transparent"
        android:onClick="onBackButtonClick"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/DateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageHeader"
        android:layout_centerHorizontal="true"
        android:text="@string/display_date_here"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@android:color/transparent"
        app:spanCount="1"/>


    <TextView
        android:id="@+id/CalorieCountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/DateDisplay"
        android:layout_centerHorizontal="true"
        android:text="@string/display_calorie_calculation_here"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@android:color/transparent"
        app:spanCount="1"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calorieRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CalorieCountDisplay"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:spanCount="1" />

    <Button
        android:id="@+id/addCalorieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_food_item"
        android:textColor="@android:color/black"
        android:layout_below="@id/calorieRecyclerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/changeDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View A Different Day's Records"
        android:textColor="@android:color/black"
        android:layout_below="@id/addCalorieButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
</RelativeLayout>